Got search bar up on the nav

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,26 +1,37 @@
 .navbar {
     height: 60px;
     background-color: rgb(44, 44, 44);
+    border-radius: 0;
 }
 
-.fa-pagelines {
+/* .fa-pagelines {
     font-size: 50px;
     color: white;
-    height: 50px;
-    width: 50px;
-}
+    height: 100px;
+    width: 100px;
+} */
 
 .navbar-brand {
     color: white;
     font-size: 30px;
 }
 
-.nav {
-    display: inline-block;
-}
-
 .navlink {
     color: white;
     margin: 10px 10px 10px 10px;
-    text-decoration: none;
+}
+
+.nav-tabs {
+    border-bottom: none;
+    margin-top: 15px;
+}
+
+.search-box {
+    float: right;
+    margin-right: 30px;
+    vertical-align : middle;
+}
+
+.btn {
+    background-color: red;
 }
