--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -9,7 +9,8 @@
 .navbar-brand {
     color: white;
     font-size: 40px;
-    margin-top: 3px;
+    margin: 16px 12px 16px 30px;
+    padding: 0px;
 }
 
 .navlink {
