--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -9,8 +9,9 @@
 .navbar-brand {
     color: white;
     font-size: 40px;
-    margin: 16px 12px 16px 30px;
+    margin: 18px 12px 17px 30px;
     padding: 0px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .navlink {
