--- a/client/src/components/HomeBackground/style.css
+++ b/client/src/components/HomeBackground/style.css
@@ -10,3 +10,11 @@
     padding: 0;
     z-index: -1;
 }
+
+.home-cover {
+    background-color: rgb(77, 75, 75, 0.3);
+    background-size: cover;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+}
