--- a/client/src/components/PageHeader/style.css
+++ b/client/src/components/PageHeader/style.css
@@ -1,5 +1,7 @@
 .page-header {
     color: white;
-    font-size: 50px;
-    margin-top: 100px;
+    font-size: 70px;
+    margin-top: 150px;
+    font-family: 'Raleway', sans-serif;
+    border-bottom: none;
 }
