--- a/client/src/components/PortfolioBackground/style.css
+++ b/client/src/components/PortfolioBackground/style.css
@@ -1,9 +1,9 @@
 .portfolio-background {
     background-color: rgb(97, 96, 96);
-    background-size: cover;
     top: 0;
+    margin: 0;
     width: 100vw;
-    height: 100vh;
+    height: auto;
     padding: 0;
     z-index: -1;
 }
