--- a/client/src/components/PortfolioBackground/style.css
+++ b/client/src/components/PortfolioBackground/style.css
@@ -1,9 +1,11 @@
 .portfolio-background {
-    background-color: rgb(97, 96, 96);
+    /* background-color: rgb(59, 59, 59); */
+    background-color: rgb(209, 208, 207);
     top: 0;
     margin: 0;
     width: 100vw;
     height: auto;
-    padding: 100px;
+    padding-right: 100px;
+    padding-left: 100px;
     z-index: -1;
 }
