--- a/client/src/components/MyCard/style.css
+++ b/client/src/components/MyCard/style.css
@@ -1,10 +1,17 @@
 .card {
     border-radius: 5px;
+    display: flex; 
+    flex-direction: row;
+}
+
+.card-img {
+    order: -1;
 }
 
 .card-body {
     padding: 10px;
     height: 230px;
+    order: 0;
 }
 
 .card-title {
