--- a/client/src/components/PortfolioBackground/style.css
+++ b/client/src/components/PortfolioBackground/style.css
@@ -1,6 +1,6 @@
 .portfolio-background {
     /* background-color: rgb(59, 59, 59); */
-    background-color: rgb(209, 208, 207);
+    background-color: white;
     top: 0;
     margin: 0;
     width: 100vw;
