--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,5 +1,5 @@
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     display: block;
     padding: 12px;
@@ -8,6 +8,7 @@
     font-size: 15px;
     z-index: 2;
     width: 100%;
+    margin-top: 30px;
 }
 
 .fa-footer {
