--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,6 +1,7 @@
 .navbar {
     height: 60px;
     background-color: rgb(44, 44, 44);
+    /* background-color: transparent; */
     border-radius: 0;
     position: fixed;
     width: 100%;
