--- a/client/src/components/ContactBackground/style.css
+++ b/client/src/components/ContactBackground/style.css
@@ -1,4 +1,4 @@
-.home-background {
+.contact-background {
     background-image: url("../../assets/images/minimal-plant.jpeg");
     background-size: cover;
     background-position: fixed;
@@ -11,10 +11,12 @@
     z-index: -1;
 }
 
-.home-cover {
+.contact-cover {
     background-color: rgb(77, 75, 75, 0.5);
-    background-size: cover;
-    position: fixed;
     height: 100vh;
-    width: 100vw;
+}
+
+.contact-text {
+    color: white;
+    font-size: 20px;
 }
